Fix bug: margin collapse in success paid page

--- a/src/styles/components/_success_pay.scss
+++ b/src/styles/components/_success_pay.scss
@@ -1,4 +1,5 @@
 .success-pay-container{
+	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	.center-logo{
